Oddaja druge faze projekta.

--- a/porocilo/porocilo.tex
+++ b/porocilo/porocilo.tex
@@ -12,13 +12,37 @@ Analiza podatkov s programom R}
 \author{Študent FMF}
 \maketitle
 
-\section{Izbira teme}
+\section{Uvoz in izvoz energetskih dobrin}
 
-\section{Obdelava, uvoz in čiščenje podatkov}
+\section{Uvoz csv tabel, ki prikazujujo uvoz in izvoz zemeljskega plina, elektrike in refinerirane nafte in agregatno proizvodnjo in portrošnjo energetike med Nemčijo, Rusijo, Veliko britanijo in ZDA. Dodani so tudi grafi, ki za vsako leto prikazujejo primerjave količin izvoza in uvoza, ter porabe in proizvodnje med vsemi državami.}
 
 \section{Analiza in vizualizacija podatkov}
 
-\includegraphics{../slike/povprecna_druzina.pdf}
+\includegraphics{../slike/Electricity_imports_exports_2008.pdf}
+\includegraphics{../slike/Electricity_imports_exports_2009.pdf}
+\includegraphics{../slike/Electricity_imports_exports_2010.pdf}
+\includegraphics{../slike/Electricity_imports_exports_2011.pdf}
+\includegraphics{../slike/Electricity_imports_exports_2012.pdf}
+\includegraphics{../slike/Natutral_gas_imprts_exports_2008.pdf}
+\includegraphics{../slike/Natutral_gas_imprts_exports_2009.pdf}
+\includegraphics{../slike/Natutral_gas_imprts_exports_2010.pdf}
+\includegraphics{../slike/Natutral_gas_imprts_exports_2011.pdf}
+\includegraphics{../slike/Natutral_gas_imprts_exports_2012.pdf}
+\includegraphics{../slike/Refined_Petrolium_imports_exports_2008.pdf}
+\includegraphics{../slike/Refined_Petrolium_imports_exports_2009.pdf}
+\includegraphics{../slike/Refined_Petrolium_imports_exports_2010.pdf}
+\includegraphics{../slike/Refined_Petrolium_imports_exports_2011.pdf}
+\includegraphics{../slike/Refined_Petrolium_imports_exports_2012.pdf}
+\includegraphics{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2008.pdf}
+\includegraphics{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2009.pdf}
+\includegraphics{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2010.pdf}
+\includegraphics{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2011.pdf}
+\includegraphics{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2012.pdf}
+\includegraphics{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2008.pdf}
+\includegraphics{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2009.pdf}
+\includegraphics{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2010.pdf}
+\includegraphics{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2011.pdf}
+\includegraphics{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2012.pdf}
 
 \section{Napredna analiza podatkov}
 
