Oddaja porocila o drugi fazi projekta.

--- a/porocilo/porocilo.tex
+++ b/porocilo/porocilo.tex
@@ -18,31 +18,31 @@ Analiza podatkov s programom R}
 
 \section{Analiza in vizualizacija podatkov}
 
-\includegraphics{../slike/Electricity_imports_exports_2008.pdf}
-\includegraphics{../slike/Electricity_imports_exports_2009.pdf}
-\includegraphics{../slike/Electricity_imports_exports_2010.pdf}
-\includegraphics{../slike/Electricity_imports_exports_2011.pdf}
-\includegraphics{../slike/Electricity_imports_exports_2012.pdf}
-\includegraphics{../slike/Natutral_gas_imprts_exports_2008.pdf}
-\includegraphics{../slike/Natutral_gas_imprts_exports_2009.pdf}
-\includegraphics{../slike/Natutral_gas_imprts_exports_2010.pdf}
-\includegraphics{../slike/Natutral_gas_imprts_exports_2011.pdf}
-\includegraphics{../slike/Natutral_gas_imprts_exports_2012.pdf}
-\includegraphics{../slike/Refined_Petrolium_imports_exports_2008.pdf}
-\includegraphics{../slike/Refined_Petrolium_imports_exports_2009.pdf}
-\includegraphics{../slike/Refined_Petrolium_imports_exports_2010.pdf}
-\includegraphics{../slike/Refined_Petrolium_imports_exports_2011.pdf}
-\includegraphics{../slike/Refined_Petrolium_imports_exports_2012.pdf}
-\includegraphics{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2008.pdf}
-\includegraphics{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2009.pdf}
-\includegraphics{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2010.pdf}
-\includegraphics{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2011.pdf}
-\includegraphics{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2012.pdf}
-\includegraphics{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2008.pdf}
-\includegraphics{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2009.pdf}
-\includegraphics{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2010.pdf}
-\includegraphics{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2011.pdf}
-\includegraphics{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2012.pdf}
+\includegraphics[width=\textwidth]{../slike/Electricity_imports_exports_2008.pdf}
+\includegraphics[width=\textwidth]{../slike/Electricity_imports_exports_2009.pdf}
+\includegraphics[width=\textwidth]{../slike/Electricity_imports_exports_2010.pdf}
+\includegraphics[width=\textwidth]{../slike/Electricity_imports_exports_2011.pdf}
+\includegraphics[width=\textwidth]{../slike/Electricity_imports_exports_2012.pdf}
+\includegraphics[width=\textwidth]{../slike/Natutral_gas_imprts_exports_2008.pdf}
+\includegraphics[width=\textwidth]{../slike/Natutral_gas_imprts_exports_2009.pdf}
+\includegraphics[width=\textwidth]{../slike/Natutral_gas_imprts_exports_2010.pdf}
+\includegraphics[width=\textwidth]{../slike/Natutral_gas_imprts_exports_2011.pdf}
+\includegraphics[width=\textwidth]{../slike/Natutral_gas_imprts_exports_2012.pdf}
+\includegraphics[width=\textwidth]{../slike/Refined_Petrolium_imports_exports_2008.pdf}
+\includegraphics[width=\textwidth]{../slike/Refined_Petrolium_imports_exports_2009.pdf}
+\includegraphics[width=\textwidth]{../slike/Refined_Petrolium_imports_exports_2010.pdf}
+\includegraphics[width=\textwidth]{../slike/Refined_Petrolium_imports_exports_2011.pdf}
+\includegraphics[width=\textwidth]{../slike/Refined_Petrolium_imports_exports_2012.pdf}
+\includegraphics[width=\textwidth]{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2008.pdf}
+\includegraphics[width=\textwidth]{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2009.pdf}
+\includegraphics[width=\textwidth]{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2010.pdf}
+\includegraphics[width=\textwidth]{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2011.pdf}
+\includegraphics[width=\textwidth]{../slike/Total_Primary_Energy_Consumption_Quadrillion_Btu_2012.pdf}
+\includegraphics[width=\textwidth]{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2008.pdf}
+\includegraphics[width=\textwidth]{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2009.pdf}
+\includegraphics[width=\textwidth]{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2010.pdf}
+\includegraphics[width=\textwidth]{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2011.pdf}
+\includegraphics[width=\textwidth]{../slike/Total_Primary_Energy_Production_Quadrillion_Btu_2012.pdf}
 
 \section{Napredna analiza podatkov}
 
